[Releng] Support Java 16 with its changes to the --illegal-access
Use Java 16.0.1 for the installer itself.

Support better merging of p2 tasks in the case that the p2 task is
restricted to bootstrap only.